[gd_scene load_steps=7 format=2]

[ext_resource path="res://public/fonts/soupofjustice.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://public/image/world3/Button.png" type="Texture" id=2]
[ext_resource path="res://game/pvp/World3/PVP Room.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/PVP BG.jpg-7f19383d3849c9d6a8cd95e10fb56576.stex"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_top = -1.88773
margin_right = 1280.0
margin_bottom = 718.112
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question BOX" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Question BOX"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.309804, 0.478431, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer1" type="TextureButton" parent="Question BOX"]
margin_left = 200.0
margin_top = 80.0
margin_right = 560.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Question BOX/Answer1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -20.0
margin_right = 75.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Correct"
align = 3
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer2" type="TextureButton" parent="Question BOX"]
margin_left = 750.0
margin_top = 80.0
margin_right = 1110.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Question BOX/Answer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wrong"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer3" type="TextureButton" parent="Question BOX"]
margin_left = 200.0
margin_top = 160.0
margin_right = 560.0
margin_bottom = 240.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Question BOX/Answer3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -20.0
margin_right = 42.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Win"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answer4" type="TextureButton" parent="Question BOX"]
margin_left = 750.0
margin_top = 160.0
margin_right = 1110.0
margin_bottom = 240.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Question BOX/Answer4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.5
margin_top = -20.0
margin_right = 60.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "lose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="RichTextLabel" parent="Question BOX"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Q1: BAlabala"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Question BOX/Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Question BOX/Answer3" to="." method="_win_pressed"]
[connection signal="pressed" from="Question BOX/Answer4" to="." method="_lose_pressed"]
